apps/mailpit/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mailpit
  labels:
    app.kubernetes.io/name: mailpit
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: mailpit
  strategy:
    # Require Recreate because the longhorn pvc is RWO and if a new pod is created
    # when using RollingUpdate, it fails since the pvc is attached already to the running one.
    type: Recreate
  replicas: 1
  template:
    metadata:
      labels:
        app.kubernetes.io/name: mailpit
      # 2026-05-25 disabling this because it requires privileged: true and runAsUser: 0 which
      # is not worth the security loss which would be required to bypass the PodAdmissionPolicy
      # at the namespace level in order to achieve.
      # annotations:
      #   instrumentation.opentelemetry.io/inject-go: "observability/generic-sdk-instrumentation"
      #   instrumentation.opentelemetry.io/otel-go-auto-target-exe: "/mailpit"
    spec:
      securityContext:
        fsGroup: 1001
        seccompProfile:
          type: RuntimeDefault
      containers:
        - name: mailpit
          image: ghcr.io/axllent/mailpit:v1.31.5
          imagePullPolicy: IfNotPresent
          securityContext:
            allowPrivilegeEscalation: false
            readOnlyRootFilesystem: true
            runAsGroup: 1001
            runAsNonRoot: true
            runAsUser: 1001
            capabilities:
              drop:
                - ALL
          args:
            - --db-file
            - /var/lib/mailpit/mailpit.db
            - --webroot
            - "/"
            - --enable-prometheus
            - "true"
            # Enable Verbose (debug level) logging (default false)
            # - --verbose
          ports:
            - name: http
              containerPort: 8025
            - name: smtp
              containerPort: 1025
          resources:
            requests:
              memory: "64Mi"
              cpu: "50m"
            limits:
              memory: "128Mi"
              cpu: "200m"
          # livenessProbe:
          #   failureThreshold: 2
          #   httpGet:
          #     path: /livez
          #     port: http
          #     scheme: HTTP
          #   initialDelaySeconds: 3
          #   periodSeconds: 20
          #   successThreshold: 1
          #   timeoutSeconds: 5
          startupProbe:
            httpGet:
              # path: /readyz
              path: /livez
              port: http
              scheme: HTTP
            periodSeconds: 1
            failureThreshold: 8
            timeoutSeconds: 2

          readinessProbe:
            httpGet:
              # path: /readyz
              path: /livez
              port: http
              scheme: HTTP
            periodSeconds: 10
            timeoutSeconds: 5
            failureThreshold: 2
          volumeMounts:
            - name: data
              mountPath: /var/lib/mailpit
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: mailpit-data
