apps/mailpit/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: mailpit-route
  annotations:
    gethomepage.dev/enabled: "true"
    gethomepage.dev/href: "https://mailpit.home.alden.ai"
    gethomepage.dev/description: Email Testing Server
    gethomepage.dev/group: Development
    gethomepage.dev/icon: mailpit.svg
    gethomepage.dev/app: mailpit # optional, may be needed if app.kubernetes.io/name != ingress metadata.name
    gethomepage.dev/name: Mailpit
    gethomepage.dev/pod-selector: app.kubernetes.io/name=mailpit
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: default-https-gateway
      namespace: istio-system
  hostnames:
    - mailpit.home.alden.ai
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - group: ""
          kind: Service
          name: mailpit
          port: 8025
          weight: 1
